WIP implementing swagger documentation for role endpoints while also tweaking swagger documentation for authentication endpoints.
